// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Input basic checks renders with custom class name 1`] = `
<input
  className="customCssClass"
  name="customClassName"
  onBlur={[Function]}
  onChange={[Function]}
  value=""
/>
`;

exports[`Input basic checks renders with custom component 1`] = `
<div>
  name: 
  customRenderer
  className: 
  customCssClass
</div>
`;

exports[`Input basic checks renders with default component 1`] = `
<input
  name="test input"
  onBlur={[Function]}
  onChange={[Function]}
  value=""
/>
`;

exports[`Input basic checks renders with default component and initial value 1`] = `
<input
  className={undefined}
  name="defaultInput"
  onBlur={[Function]}
  onChange={[Function]}
  value="some value"
/>
`;

exports[`Input basic checks updates its value on blur 1`] = `
<input
  name="test input"
  onBlur={[Function]}
  onChange={[Function]}
  value="new value on blur"
/>
`;

exports[`Input basic checks updates its value on change 1`] = `
<input
  name="test input"
  onBlur={[Function]}
  onChange={[Function]}
  value="new value"
/>
`;

exports[`Input basic checks updates its value when prop is changed 1`] = `
<input
  name="test input"
  onBlur={[Function]}
  onChange={[Function]}
  value="changed value"
/>
`;
